import courses with modal step

--- a/views/courses/forms/form-import-course.hbs
+++ b/views/courses/forms/form-import-course.hbs
@@ -1,8 +1,8 @@
 <div class="form-group" id="step1">
     <p>ShareToken</p>
-    <input class="form-control" name="shareToken" id="shareToken" type="text" />
+    <input class="form-control" name="shareToken" id="shareToken" type="text" required />
 </div>
 <div class="form-group" id="step2">
     <p>Kursname</p>
-    <input class="form-control" name="name" id="courseName" type="text" />
+    <input class="form-control" name="name" id="courseName" type="text" required />
 </div>
