--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -37,8 +37,10 @@
                 {{#userHasPermission "COURSE_EDIT"}}
                 <div class="col-xs-12">
                     <div class="row padding-top">
-                        <a href="/courses/add" class="btn btn-add btn-primary">Kurs anlegen</a>
-                        <a class="btn btn-add btn-secondary btn-import-course">Kurs importieren</a>
+                        <div class="col-sm-12">
+                            <a href="/courses/add" class="btn btn-add btn-primary">Kurs anlegen</a>
+                            <a class="btn btn-add btn-secondary btn-import-course">Kurs importieren</a>
+                        </div>
                     </div>
                 </div>
                 {{/userHasPermission}}
