--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -23,7 +23,7 @@
                         <div class="col-sm-12 no-padding">
                             <center>
                                 <i class="fa fa-times consent-status"></i>
-                                Keine Einverständnis &emsp;
+                                Keine Einverständniserklärung vorhanden &emsp;
                                 <i class="fa fa-circle-thin consent-status"></i>
                                 Eltern haben zugestimmt (oder Schüler ist über 18) &emsp;
                                 <i class="fa fa-check consent-status"></i>
@@ -54,7 +54,7 @@
 
                 {{#embed "lib/components/modal-form" class="invitation-modal"}}
                     {{#content "fields"}}
-                        {{> "administration/forms/form-invitation"}}
+                        {{> "administration/forms/form-invitation-student"}}
                     {{/content}}
                 {{/embed}}
             </section>
