--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -53,17 +53,17 @@
                             </select>
                         </div>
                     </div>
-                    <p>Die Erhebung erfolgt für Forschung und Optimierung.<br/><br/></p>
-                {{else}}
-                    <div class="form-group">
-                        <Label>Klassen:</Label>
-                        <select class="form-control form-control-lg" type="text" name="classes" multiple="true">
-                            {{#each classes}}
-                                <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.displayName}} ({{this.year.name}})</option>
-                            {{/each}}
-                        </select>
-                    </div>
+                    <p>Die Erhebung erfolgt für Forschung und Optimierung.</p>
                 {{/unless}}
+
+                <div class="form-group mb-2">
+                    <Label>Klassen:</Label>
+                    <select class="form-control form-control-lg" type="text" name="classes" multiple="true" placeholder="Klassen des Nutzers">
+                        {{#each classes}}
+                            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>{{this.displayName}} ({{this.year.name}})</option>
+                        {{/each}}
+                    </select>
+                </div>
                 <button class="btn btn-sm btn-secondary pull-right" id="edit-consent" type="button">bearbeiten <i class="fa fa-edit"></i></button>
                 <h5>Einwilligungen: {{{consentStatusIcon}}}</h5>
                 <div class="row" id="consents-overview">
