--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -39,7 +39,7 @@
                             <button type="submit" class="btn btn-primary btn-add-modal">
                                 Schüler hinzufügen
                             </button>
-                            <button class="btn btn-secondary btn-invitation-link">
+                            <button class="btn btn-secondary btn-invitation-link student">
                                 Einladungslink generieren
                             </button>
                         </div>
