--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -37,7 +37,7 @@
                             <button type="submit" class="btn btn-primary btn-add-modal">
                                 Lehrer hinzufügen
                             </button>
-                            <button class="btn btn-secondary btn-invitation-link">
+                            <button class="btn btn-secondary btn-invitation-link teacher">
                                 Einladungslink generieren
                             </button>
                         </div>
