--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -74,14 +74,13 @@
                 {{#userHasPermission "COURSE_EDIT"}}
                     <div class="row padding-top">
                         <div class="col-sm-12">
-                            <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Thema
-                                bearbeiten</a>
+                            <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Bearbeiten</a>
                             <a href="#"
                             data-href="{{../_id}}"
                             data-courseId="{{../courseId}}"
                             class="btn btn-add btn-secondary btn-create-share">
                                 <i class="fa fa-share-alt"></i>
-                                Thema mit anderen Lehrern teilen
+                                mit anderen Lehrern teilen
                             </a>
                         </div>
                     </div>
