--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -19,6 +19,8 @@
         <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
         
         <input class="form-control linked" name="importHash" type="hidden" value="{{user.importHash}}"/>
+        {{#if classOrSchoolId}}<input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />{{/if}}
+        {{#if user.userId}}<input type="hidden" name="userId" value="{{query.userId}}" />{{/if}}
       </section>
 
 
