View fixes, points from Table:
- mehr Abstand Registration text unter Radio Button
- Überarbeitung Geschlecht-Dropdown:
- Umbau Buttons Klassentabelle: (das ist aber schon quasi fertig)
- "Klasse löschen" zeigt unvollständigen Klassennamen (c statt 9c)

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -59,7 +59,8 @@
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht: *</Label>
             <select class="form-control form-control-lg" type="text" name="gender">
-              <option value="noinfo" selected>keine Angabe</option>
+              <option disabled selected value> -- select an option -- </option>
+              <option value="noinfo">keine Angabe</option>
               <option value="male">männlich</option>
               <option value="female">weiblich</option>
               <option value="other">andere</option>
