--- a/static/styles/administration/dataprivacy.scss
+++ b/static/styles/administration/dataprivacy.scss
@@ -52,3 +52,8 @@ label{
 input[type="radio"]{
     margin-right: 4px;
 }
+.chosen-results{
+    li.disabled-result{
+        display:    none !important;
+    }
+}
