firstname to camelcase firstName

--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -39,7 +39,7 @@
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
               {{#if user.firstName}}
-                  <input class="form-control linked" name="firstname" type="text" value="{{user.firstName}}" readonly required/>
+                  <input class="form-control linked" name="firstName" type="text" value="{{user.firstName}}" readonly required/>
               {{else}}
                   <input class="form-control linked" name="firstName" type="text" placeholder="Ihren Vornamen hier eingeben" required/>
               {{/if}}
