--- a/static/styles/partner/partner.scss
+++ b/static/styles/partner/partner.scss
@@ -59,4 +59,7 @@ hgroup {
         top: 50%;
         transform: translateY(-50%);
     }
+    #hiddenAdvisers.collapse.in{
+        display: flex !important;
+    }
 }
