--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -59,11 +59,10 @@
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht: *</Label>
             <select class="form-control form-control-lg" type="text" name="gender">
-              <option disabled selected value> -- select an option -- </option>
-              <option value="noinfo">keine Angabe</option>
-              <option value="male">männlich</option>
-              <option value="female">weiblich</option>
-              <option value="other">andere</option>
+                <option value="noinfo" selected>keine Angabe</option>
+                <option value="male">männlich</option>
+                <option value="female">weiblich</option>
+                <option value="other">anderes</option>
             </select>
           </div>
         </div>
