--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -39,7 +39,7 @@
                     </div>
                 {{/each}}
                 <div id="buttonWrapper">
-                    <button class="btn toggle-partner" type="button" class="btn btn-info" data-toggle="collapse" data-target="#hiddenAdvisers">mehr anzeigen</button>
+                    <div class="btn toggle-partner" class="btn btn-info" data-toggle="collapse" data-target="#hiddenAdvisers">mehr anzeigen<i class="fa fa-angle-down" aria-hidden="true"></i></div>
                 </div>
                 <div class="col-xs-12">
                     <div id="hiddenAdvisers" class="collapse row">   
