--- a/static/styles/partner/partner.scss
+++ b/static/styles/partner/partner.scss
@@ -71,6 +71,7 @@ hgroup {
         font-weight: 500;
         i {
             display: block;
+            pointer-events: none;
         }
     }
     .buttonWrapper {
