--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -39,7 +39,7 @@
 		  {{#if birthdate}}
 		     <input class="form-control linked" name="birthdateInfo" type="text" value={{birthdate}} disabled required/>
 		  {{else}}
-			<input class="form-control linked" data-date data-min-date="1970/01/01" data-max-date="2000/08/21" data-start-date="1999/01/01" name="student-birthdate" type="text" required autocomplete="off" />
+			<input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}" name="student-birthdate" type="text" required autocomplete="off" />
 		  {{/if}}
         </div>
 
