firstlogin: erkunden, remove back button registration

--- a/views/firstLogin/firstLoginExistingEmployee.hbs
+++ b/views/firstLogin/firstLoginExistingEmployee.hbs
@@ -28,7 +28,7 @@
       <section data-panel="section-3">
         <h4>Danke!</h4>
         <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
-            <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
+            <a class="btn btn-primary mt-2" href="/login">Weiter zur {{theme.short_title}}</a>
         </p>
       </section>
       {{/content}}
