--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -12,7 +12,7 @@
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
       {{#content "panels"}}
-      <section data-panel="section-1">
+      <section data-panel="section-1" class="noback">
         <h4>Willkommen zur Anmeldung in der {{theme.title}}</h4>
         <p>Wir freuen uns, dass du die {{theme.title}} nutzen möchtest und mithilfst, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, nicht profitorientiert und datenschutzkonform.</p>
         <p>Bitte registriere dich zunächst in der {{theme.title}} und stimme den Nutzungsbedingungen zu, damit du die Vorteile der digitalen Lernumgebung nutzen kannst.</p>
