--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -19,7 +19,7 @@
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
               {{#if query.firstName}}
-                  <input class="form-control linked" name="student-firstname" type="text" value="{{query.firstName}}" disabled required/>
+                  <input class="form-control linked" name="student-firstname" type="text" value="{{query.firstName}}" readonly required/>
               {{else}}
                   <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" required/>
               {{/if}}
@@ -27,7 +27,7 @@
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
               {{#if query.lastName}}
-                  <input class="form-control linked" name="student-secondname" type="text" value="{{query.lastName}}" disabled required/>
+                  <input class="form-control linked" name="student-secondname" type="text" value="{{query.lastName}}" readonly required/>
               {{else}}
                   <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes" required/>
               {{/if}}
@@ -37,7 +37,7 @@
         <div class="form-group">
           <label>Geburtsdatum des Schülers: *</label>
 		  {{#if birthdate}}
-		     <input class="form-control linked" name="birthdateInfo" type="text" value={{birthdate}} disabled required/>
+		     <input class="form-control linked" name="birthdateInfo" type="text" value={{birthdate}} readonly required/>
 		  {{else}}
 			  <input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus 10 0 0 "DD.MM.YYYY"}}" name="student-birthdate" type="text" data-from="student-birthdate" autocomplete="off" required/>
 		  {{/if}}
