--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -185,6 +185,25 @@
             font-size:10px;
             color:#aaa;
         }
+        .timelines{
+            width: 100px;
+            height: 3px;
+            top: -3px;
+            left: 0px;
+            background: #696969;
+            display: block;
+            position: absolute;
+
+            &:before {
+                height: 245px;
+                content: '';
+                width: 1px;
+                background: black;
+                right: 0px;
+                position: absolute;
+                bottom: 0px;
+            }
+        }
     }
 }
 
